--- a/_forms/publication_form.html
+++ b/_forms/publication_form.html
@@ -301,7 +301,7 @@ alert("Please enter a firstname and / or lastname")
     if(s == "null"){
       getdata(file);
     }
-    window.location.reload()
+    // window.location.reload()
     return(s);
   }
 
