--- a/_forms/publication_form.html
+++ b/_forms/publication_form.html
@@ -299,10 +299,12 @@ alert("Please enter a firstname and / or lastname")
     });
     var s = String(sessionStorage.getItem(file))
     if(s == "null"){
+    (document.getElementById("loading")).style.display = "none";;
+    (document.getElementById("after_submission")).style.display = "block";
       window.location.reload();
     }
     (document.getElementById("loading")).style.display = "none";;
-    (document.getElementById("after_submission")).style.display = "show";
+    (document.getElementById("after_submission")).style.display = "block";
     return(s);
   }
 
