--- a/_forms/talks_form.html
+++ b/_forms/talks_form.html
@@ -7,8 +7,9 @@ destination_layout: talk
 
 
 <center>
-    <div id = "after_submission">
-      <form onsubmit = "saveFile(); after_submission();">
+    <div id="loading">Loading...</div>
+    <div id = "after_submission" style="display: none;">
+    <form onsubmit = "saveFile(); after_submission();">
       <div><input type = "text" id="topic" placeholder="Enter Talk Title" required="required" onchange="check_existence('topic')"/></div>
 
       <div><input type="text" id="locus" placeholder="Enter talk location" required="required"/></div>
@@ -235,18 +236,19 @@ function talker(){
     }
   }
 
-  function getdata(file, variables){
+  function getdata(file){
     $.get(file, function(result){
-        var obj = $(result).find('script');
-        var page1X = $(result).find('div.myData').data(variables);
-        if(page1X != null){
-          sessionStorage.setItem(file, page1X);
-        }
-        else{
-          window.location.reload();
-        }
+      var obj = $(result).find('script');
+      var page1X = $(result).find('div.myData').data('x');
+      sessionStorage.setItem(file, page1X);
     });
-    return(String(sessionStorage.getItem(file)));
+    var s = String(sessionStorage.getItem(file))
+    if(s == "null"){
+      window.location.reload();
+    }
+    (document.getElementById("loading")).style.display = "none";;
+    (document.getElementById("after_submission")).style.display = "block";
+    return(s);
   }
 
   let title_string = ((getdata("/talks.html", 'x')).concat(",")).concat(getdata("/speech.html", 'x'));
