--- a/_forms/courses_form.html
+++ b/_forms/courses_form.html
@@ -6,8 +6,9 @@ destination_layout: default
 ---
 
 <center>
-    <div id = "after_submission">          
-        <form onsubmit="saveFile(); after_submission();">
+    <div id="loading">Loading...</div>
+    <div id = "after_submission" style="display: none;">
+    <form onsubmit="saveFile(); after_submission();">
           <div><input type="text" id="topic" placeholder="Enter Title" required="required" onchange="check_existence('topic')"/></div>
   
           <div><input type="text" id="prefix_number" placeholder="Prefix Number" /></div>
@@ -213,16 +214,17 @@ alert("Please enter a firstname and / or lastname")
 
 function getdata(file){
     $.get(file, function(result){
-        var obj = $(result).find('script');
-        var page1X = $(result).find('div.myData').data('x');
-        if(page1X != null){
-        sessionStorage.setItem(file, page1X);
-        }
-        else{
-        window.location.reload();
-        }
+      var obj = $(result).find('script');
+      var page1X = $(result).find('div.myData').data('x');
+      sessionStorage.setItem(file, page1X);
     });
-    return(String(sessionStorage.getItem(file)));
+    var s = String(sessionStorage.getItem(file))
+    if(s == "null"){
+      window.location.reload();
+    }
+    (document.getElementById("loading")).style.display = "none";;
+    (document.getElementById("after_submission")).style.display = "block";
+    return(s);
 }
 
 let title_string = getdata("/courses.html");
