--- a/_forms/people_form.html
+++ b/_forms/people_form.html
@@ -5,8 +5,8 @@ upload: https://github.com/CS4SG/CS4SG.github.io/tree/master/_people
 destination_layout: people
 ---
 
-
-<div id = "after_submission">
+<div id="loading">Loading...</div>
+<div id = "after_submission" style="display: none;">
 
   <div>
       <select id="category">
@@ -71,12 +71,7 @@ destination_layout: people
 </div>
 </center></div>
 <script>
-window.onload = function() {
-  if(!window.location.hash) {
-      window.location = window.location + '#loaded';
-      window.location.reload();
-  }
-}
+
   var degrees_str = ""
   var courses_str = ""
     let saveFile = () => {
@@ -210,17 +205,18 @@ function save_courses(){
 }
 
 function getdata(file){
-        $.get(file, function(result){
-            var obj = $(result).find('script');
-            var page1X = $(result).find('div.myData').data('x');
-            if(page1X != null){
-                sessionStorage.setItem(file, page1X);
-            }
-            else{
-                window.location.reload();
-            }
-        });
-        return(String(sessionStorage.getItem(file)));
+    $.get(file, function(result){
+      var obj = $(result).find('script');
+      var page1X = $(result).find('div.myData').data('x');
+      sessionStorage.setItem(file, page1X);
+    });
+    var s = String(sessionStorage.getItem(file))
+    if(s == "null"){
+      window.location.reload();
+    }
+    (document.getElementById("loading")).style.display = "none";;
+    (document.getElementById("after_submission")).style.display = "block";
+    return(s);
 }
 
 let title_string = getdata("https://cs4sg.github.io/people.html");
