--- a/_forms/people_form.html
+++ b/_forms/people_form.html
@@ -221,10 +221,10 @@ function getdata(file){
 
 let title_string = getdata("https://cs4sg.github.io/people.html");
   function check_existence(){
-    firstname = document.getElementById("fname").value
-    lastname = document.getElementById("lname").value
+    firstname = document.getElementById("fname").value.toLowerCase()
+    lastname = document.getElementById("lname").value.toLowerCase()
     if(firstname != "" && lastname != ""){
-      titles = title_string.split(",")
+      titles = title_string.toLowerCase.split(",")
       if(titles.includes(firstname+" "+lastname)){
         alert("You are already added to CS4SG. Please try using another name if not.")
         document.getElementById("fname").value = '';
