--- a/_forms/courses_form.html
+++ b/_forms/courses_form.html
@@ -222,8 +222,8 @@ function getdata(file){
 
 let title_string = getdata("/courses.html");
 function check_existence(id){
-    titles = title_string.split(",")
-    if(titles.includes(document.getElementById(id).value)){
+    titles = title_string.toLowerCase().split(",")
+    if(titles.includes(document.getElementById(id).value.toLowerCase())){
         alert("Title already exist! please choose another title.")
         document.getElementById(id).value = '';
     }
