--- a/_forms/project_form.html
+++ b/_forms/project_form.html
@@ -199,8 +199,8 @@ function getdata(file){
 
 let title_string = getdata("/projects.html");
   function check_existence(id){
-      titles = title_string.split(",")
-      if(titles.includes(document.getElementById(id).value)){
+      titles = title_string.toLowerCase().split(",")
+      if(titles.includes(document.getElementById(id).value.toLowerCase())){
         alert("Title already exist! please choose another title.")
         document.getElementById(id).value = '';
       }
