--- a/_forms/resource_link_form.html
+++ b/_forms/resource_link_form.html
@@ -286,8 +286,8 @@ function getdata(file){
 let title_string = getdata("/code.html");
 console.log(title_string)
 function check_existence(id){
-    titles = title_string.split(",")
-    if(titles.includes(document.getElementById(id).value)){
+    titles = title_string.toLowerCase().split(",")
+    if(titles.includes(document.getElementById(id).value.toLowerCase())){
         alert("Title already exist! please choose another title.")
         document.getElementById(id).value = '';
     }
