--- a/_forms/talks_form.html
+++ b/_forms/talks_form.html
@@ -247,8 +247,8 @@ function talker(){
 
   let title_string = ((getdata("/talks.html", 'x')).concat(",")).concat(getdata("/speech.html", 'x'));
   function check_existence(id){
-      titles = title_string.split(",")
-      if(titles.includes(document.getElementById(id).value)){
+      titles = title_string.toLowerCase().split(",")
+      if(titles.includes(document.getElementById(id).value.toLowerCase())){
         alert("Title already exist! please choose another title.")
         document.getElementById(id).value = '';
       }
