fixed name C4SG

--- a/create_form.html
+++ b/create_form.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <nav id="navbar">
-    <header>CS4SG Organization</header>
+    <header>C4SG Organization</header>
     <ul>
       <li><a class="nav-link" href="./#Introduction">Introduction</a></li>
       <li><a class="nav-link" href="./#add_info">Adding information to the website</a></li>
@@ -175,12 +175,12 @@ layout: default
                     <h4 id="tags">Adding Tags</h4>
                     <p>This is a 2-part functionality.
                       <ol type="I">
-                        <li>Changes in the individual section of the <a href="\" target="_blank">CS4SG website</a></li>
+                        <li>Changes in the individual section of the <a href="\" target="_blank">C4SG website</a></li>
                         <li>Fetching the data from the official website page into the form.</li>
                       </ol>
                     </p>
                     <center><a href="./assets/images/tags.jpg" target="_blank"><img src="./assets/images/tags.jpg" alt="Generate Tags" class="help_img"></a></center>
-                    <b>Step-I. Changes in the individual section of the CS4SG Website</b>
+                    <b>Step-I. Changes in the individual section of the C4SG Website</b>
                     <p>In order to fetch the data from the page, we need to get a string like "item #1,item #2,item #3,...". In order to do that,
                       we can loop through the data, and append whatever information we need, in the string.
                     </p>
@@ -338,7 +338,7 @@ layout: default
     &#60;center&#62;&#60;table width='80%'&#62;&#60;h2&#62;
     Thank you for submitting your publication.&#60;/h2&#62;
     &#60;br&#62;&#60;br&#62;
-     To add it to the CS4SG website, just upload the file to the destination folder.
+     To add it to the C4SG website, just upload the file to the destination folder.
       Here is the link for the folder
       &#60;br&#62;&#60;a href = '{{ page.upload }}' target='_blank'>{{ page.upload }}
       &#60;/a&#62;&#60;/table&#62;&#60;/center&#62;"
