--- a/create_section.html
+++ b/create_section.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <nav id="navbar">
-    <header>CS4SG Organization</header>
+    <header>C4SG Organization</header>
     <ul>
       <li><a class="nav-link" href="./#Introduction">Introduction</a></li>
       <li><a class="nav-link" href="./#add_info">Adding information to the website</a></li>
