--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <nav id="navbar">
-  <header>CS4SG Organization</header>
+  <header>C4SG Organization</header>
   <ul>
     <li><a class="nav-link" href="#Introduction">Introduction</a></li>
     <li><a class="nav-link" href="#add_info">Adding information to the website</a></li>
@@ -19,7 +19,7 @@ layout: default
     <header>Introduction</header>
     <article>
       <p>
-        Welcome to CS4SG. This guidebook will walk through different aspects of the 
+        Welcome to C4SG. This guidebook will walk through different aspects of the 
         organization's website. For example- adding information or uploading data, how each section
         is build up, website's architecture, and how to make changes in the code.
       </p>
@@ -30,7 +30,7 @@ layout: default
     <article>
       <p>
         You might want to enter information to the website. For example, adding research projects or
-        information about a new grant that CS4SG just received! Please follow the following steps to add
+        information about a new grant that C4SG just received! Please follow the following steps to add
         those inforation to the website...
         <ul>
           <li>
@@ -61,7 +61,7 @@ layout: default
           </li>
           <li>
             <h3>You are all set!</h3>
-            <p>Congrats! Your changes has been published on the CS4SG website.</p>
+            <p>Congrats! Your changes has been published on the C4SG website.</p>
             <p><b><font color="red">*</font>&nbsp;Please note that the files uploaded to GitHub sometimes might take around 2-5 minutes to show up.</b></p>
           </li>
         </ul>
