--- a/_forms/funding_form.html
+++ b/_forms/funding_form.html
@@ -26,7 +26,7 @@ destination_layout: funds
             <input type="text" id="grant_notice" placeholder="Link to the grant's notice link" required="required" />
         </div>
           <div>
-              <input type="number" id="grants" placeholder="Enter grant amount in USD" min="0.01" step="0.01" />
+            <input type="number" class="currency" min="0.01" id="grants" />
           </div>
         
           <div>
@@ -101,7 +101,7 @@ destination_layout: funds
           const title = document.getElementById('title').value;
           const org_name = document.getElementById('org_name').value;
           const org_link = document.getElementById('org_link').value;
-          const grants = numberWithCommas(document.getElementById('grants').value);
+          const grants = document.getElementById('grants').value;
           const grant_notice = document.getElementById('grant_notice').value;
           const duration = document.getElementById('valid').value
           const start = document.getElementById('start').value
@@ -246,9 +246,30 @@ destination_layout: funds
       }
   }
 
-  function numberWithCommas(x) {
-    return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
-  }
+  //Currency Convertor
+  (function($) {
+  $.fn.currencyInput = function() {
+    this.each(function() {
+      var wrapper = $("<div class='currency-input' />");
+      $(this).wrap(wrapper);
+      $(this).before("<span class='currency-symbol'>$</span>");
+      $(this).change(function() {
+        var min = parseFloat($(this).attr("min"));
+        var max = parseFloat($(this).attr("max"));
+        var value = this.valueAsNumber;
+        if(value < min)
+          value = min;
+        else if(value > max)
+          value = max;
+        $(this).val(value.toFixed(2)); 
+      });
+    });
+  };
+})(jQuery);
+
+$(document).ready(function() {
+  $('input.currency').currencyInput();
+});
 </script>
 
 <!-- Developer: Prakshal Jain || Contact: prakshal@buffalo.edu -->
