--- a/_forms/funding_form.html
+++ b/_forms/funding_form.html
@@ -93,7 +93,7 @@ destination_layout: funds
 </center>
 
 <script>
-  
+  var amt = "";
   function arrayRemove(arr, value) { return arr.filter(function(ele){ return ele != value; });}
       let saveFile = () => {
           
@@ -101,7 +101,6 @@ destination_layout: funds
           const title = document.getElementById('title').value;
           const org_name = document.getElementById('org_name').value;
           const org_link = document.getElementById('org_link').value;
-          const grants = document.getElementById('currency-field').value;
           const grant_notice = document.getElementById('grant_notice').value;
           const duration = document.getElementById('valid').value
           const start = document.getElementById('start').value
@@ -123,7 +122,7 @@ destination_layout: funds
               "organization: "+org_name+"\n"+
               "org_link: "+org_link+"\n"+
               "grant_notice: "+grant_notice+"\n"+
-              "grants: "+grants+"\n"+
+              "grants: "+amt+"\n"+
               "duration: "+duration+"\n"+
               "start: "+start+"\n"+
               "tagged_projects: "+tagged+"\n"+
@@ -323,6 +322,9 @@ function formatCurrency(input, blur) {
   
   // send updated string to input
   input.val(input_val);
+
+  //Save string to variable
+  amt = input_val;
 
   // put caret back in the right position
   var updated_len = input_val.length;
