--- a/_forms/funding_form.html
+++ b/_forms/funding_form.html
@@ -26,7 +26,7 @@ destination_layout: funds
             <input type="text" id="grant_notice" placeholder="Link to the grant's notice link" required="required" />
         </div>
           <div>
-            <input type="text" name="currency-field" id="currency-field" pattern="^\$\d{1,3}(,\d{3})*(\.\d+)?$" value="" data-type="currency" placeholder="Grant Amount">
+            <input type="number" name="currency-field" id="currency-field" pattern="^\$\d{1,3}(,\d{3})*(\.\d+)?$" value="" data-type="currency" placeholder="Grant Amount">
           </div>
         
           <div>
@@ -101,6 +101,7 @@ destination_layout: funds
           const title = document.getElementById('title').value;
           const org_name = document.getElementById('org_name').value;
           const org_link = document.getElementById('org_link').value;
+          const grants = document.getElementById('currency-field').value;
           const grant_notice = document.getElementById('grant_notice').value;
           const duration = document.getElementById('valid').value
           const start = document.getElementById('start').value
@@ -122,7 +123,7 @@ destination_layout: funds
               "organization: "+org_name+"\n"+
               "org_link: "+org_link+"\n"+
               "grant_notice: "+grant_notice+"\n"+
-              "grants: "+amt+"\n"+
+              "grants: "+grants+"\n"+
               "duration: "+duration+"\n"+
               "start: "+start+"\n"+
               "tagged_projects: "+tagged+"\n"+
