fixed name C4SG

--- a/_forms/funding_form.html
+++ b/_forms/funding_form.html
@@ -26,7 +26,7 @@ destination_layout: funds
             <input type="text" id="grant_notice" placeholder="Link to the grant's notice link" required="required" />
         </div>
           <div>
-            <textarea id="grants" placeholder="Enter grant amount in USD" pattern="^\$\d{1,3}(,\d{3})*(\.\d+)?$" data-type="currency"></textarea>
+            <textarea id="grants" placeholder="Enter grant amount in USD" pattern="^\$\d{1,3}(,\d{3})*(\.\d+)?$" data-type="currency" style="box-shadow: none; resize: none;"></textarea>
           </div>
         
           <div>
