fixed name C4SG

--- a/_forms/funding_form.html
+++ b/_forms/funding_form.html
@@ -246,7 +246,7 @@ destination_layout: funds
       }
   }
 
-  $("input[data-type='currency']").on({
+  $("textarea[data-type='currency']").on({
     keyup: function() {
       formatCurrency($(this));
     },
