--- a/_forms/funding_form.html
+++ b/_forms/funding_form.html
@@ -232,7 +232,7 @@ destination_layout: funds
     if(s == "null"){
       window.location.reload();
     }
-    (document.getElementById("loading")).style.display = "none";;
+    (document.getElementById("loading")).style.display = "none";
     (document.getElementById("after_submission")).style.display = "block";
     return(s);
   }
