--- a/_forms/blogpost_form.html
+++ b/_forms/blogpost_form.html
@@ -148,9 +148,11 @@ destination_layout: post
     function after_submission(){
       document.getElementById("after_submission").innerHTML = "<br><br><center><table width='80%'><h2>Thank you for submitting your blog post.</h2><br><br> To add it to the CS4SG Blog, just upload the file to the destination folder. Here is the link for the folder <br><a href = '{{ page.upload }}' target='_blank'>{{ page.upload }}</a></table></center>"
     }
+
+    var peop = getdata("/people.html");
   
     var res_topics = tagger(getdata("/projects.html"), 'tagged', "t");
-    var people = tagger(getdata("/people.html"), 'peoples', "v");
+    var people = tagger(peop, 'peoples', "v");
     var courses = tagger(getdata("/courses.html"), 'tag_courses', "c");
     var publications = tagger(getdata("/publications.html"), 'publish', "publ");
     var funding = tagger(getdata("/funding.html"), 'funded', "funds");
