--- a/_forms/blogpost_form.html
+++ b/_forms/blogpost_form.html
@@ -153,6 +153,7 @@ destination_layout: post
   
     var res_topics = tagger(getdata("/projects.html"), 'tagged', "t");
     var people = tagger(peop, 'peoples', "v");
+    var rel_people = tagger(peop, 'peoples', "rel");
     var courses = tagger(getdata("/courses.html"), 'tag_courses', "c");
     var publications = tagger(getdata("/publications.html"), 'publish', "publ");
     var funding = tagger(getdata("/funding.html"), 'funded', "funds");
@@ -194,20 +195,35 @@ destination_layout: post
       return people_checked
     }
   
-    function add_new(id, list_name, ul_name){
-      var n = document.getElementById(id).value
-      if(n != ""){
-        eval(String(list_name)+".push('"+n+"')");
-          var node = document.createElement("li");
-          node.onclick = function() {this.parentNode.removeChild(this);};
-          var textnode = document.createTextNode(n);
-          node.appendChild(textnode);
-          document.getElementById(ul_name).appendChild(node);
-        document.getElementById(id).value = "";
-      }
-      else{
-      }
+function add_new(){
+  var n = document.getElementById("first_name").value
+  var m = document.getElementById("last_name").value
+  var link = document.getElementById("person_url").value
+  if(n != "" && m != ""){
+    titles = peop.split(",")
+    if(titles.includes(n+" "+m)){
+      alert("You are already added to CS4SG Organization. Please select the name from above")
+      document.getElementById("fn").value = '';
+      document.getElementById("ln").value = '';
+      document.getElementById("pu").value = "";
     }
+    else{
+      var toadd = (link != "") ? "<a href = '"+ link +"' target='_blank'>"+n+" "+m+"</a>" : n+" "+m
+      rel_people.push(toadd);
+      var node = document.createElement("li");
+      node.onclick = function() {this.parentNode.removeChild(this); rel_people = arrayRemove(rel_people, toadd);};
+      console.log(rel_people);
+      node.innerHTML = (link != "") ? n+" "+m+"&nbsp;&nbsp;("+ link+")" : n+" "+m;
+      document.getElementById("new_people_added").appendChild(node);
+      document.getElementById("first_name").value = "";
+      document.getElementById("last_name").value = "";
+      document.getElementById("person_url").value = "";
+    }
+  }
+  else{
+  alert("Please enter a firstname and / or lastname")
+  }
+}
 
 function add_new2(){
   var n = document.getElementById("fn").value
