--- a/_forms/blogpost_form.html
+++ b/_forms/blogpost_form.html
@@ -153,7 +153,7 @@ destination_layout: post
   
     var res_topics = tagger(getdata("/projects.html"), 'tagged', "t");
     var people = tagger(peop, 'peoples', "v");
-    var rel_people = tagger(peop, 'peoples', "rel");
+    var rel_people = tagger(peop, 'tagged_people', "rel");
     var courses = tagger(getdata("/courses.html"), 'tag_courses', "c");
     var publications = tagger(getdata("/publications.html"), 'publish', "publ");
     var funding = tagger(getdata("/funding.html"), 'funded', "funds");
