--- a/_forms/talks_form.html
+++ b/_forms/talks_form.html
@@ -221,15 +221,17 @@ function talker(){
   function add_new_orator(){
     n = document.getElementById("first_name").value;
     m = document.getElementById("last_name").value;
+    var link = document.getElementById("person_url").value
     titles = peop.split(",")
     if(titles.includes(n+" "+m)){
       alert("You are already in the CS4SG Organization. Please select the name from above")
       document.getElementById("first_name").value = "";
       document.getElementById("last_name").value = "";
+      document.getElementById("person_url").value = "";
     }
     else{
       document.getElementById("new_orator_added").innerHTML = n+" "+m
-      t = n+" "+m;
+      t = (link != "") ? "<a href = '"+ link +"' target='_blank'>"+n+" "+m+"</a>" : n+" "+m;
     }
   }
 
