fixed external addition

--- a/_forms/talks_form.html
+++ b/_forms/talks_form.html
@@ -166,7 +166,7 @@ function talker(){
   return checked
 }
 
-  var res_topics = tagger(getdata("/projects.html",'x'), 'tagged', "t");
+  var res_topics = tagger(getdata("/projects.html",'x'), 'tagged', "res_top");
   var resources = tagger(getdata("/resourceLinks.html", 'x'), 'resource', "reso");
   var resources_slides = tagger(getdata("/resource.html", 'x'), 'slide_res', "sl_res");
 
