Trying Principal Investigator

--- a/_forms/funding_form.html
+++ b/_forms/funding_form.html
@@ -128,6 +128,7 @@ destination_layout: funds
               pi = ext_person;
             }
             pi = pi + "==>>Principal_Investigator";
+            people.push(pi);
           }
           const tagged = res_topics.toString();
           const tagged_people = people.toString();
