--- a/_forms/funding_form.html
+++ b/_forms/funding_form.html
@@ -52,23 +52,14 @@ destination_layout: funds
       <div>
         <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;"><center><h5>Choose Principal Investigator</h5></center><div id="orator"></div><hr/>
         <center><h5>Principal Investigator</h5></center>
-        <div><input type="text" id="first_name" placeholder="Enter a new principal investigator" style="width:45%">&nbsp;<input type="text" id="last_name" placeholder="Last Name" style="width:45%"></div>
-        <div><input type="text" id="person_url" placeholder="Enter website URL (if any)" style="width:90%"></div>
+        <div><input type="text" id="fprincipal" placeholder="Enter a new principal investigator" style="width:45%">&nbsp;<input type="text" id="lprincipal" placeholder="Last Name" style="width:45%"></div>
+        <div><input type="text" id="pi_url" placeholder="Enter website URL (if any)" style="width:90%"></div>
         <input type="button" onclick="add_new_PI();" value="Add principal investigator" style="width:10%"> &nbsp; OR  &nbsp;
         <input type="button" onclick="window.open('_forms/people_form.html')" value="Add to Organization"><br />
         <div style="font-weight: normal; text-align: left; padding: 10px;">
           <b>Added non-organization Principal Investigator:</b>
           <label id="new_PI_added" style="font-weight: normal;"></label>
         </div>
-        </div>
-      </div>
-  
-      <div>
-        <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">
-          <h5>Principal Investigator</h5>
-          <input type="text" id="fprincipal" placeholder="Principal Investigator first name" style="width:45%"/>
-          <input type="text" id="lprincipal" placeholder="Principal Investigator first name" style="width:45%"/>
-          <div><input type="text" id="pi_url" placeholder="Enter website URL (if any)" style="width:90%"></div>
         </div>
       </div>
 
@@ -249,9 +240,9 @@ destination_layout: funds
   }
 
   function add_new_PI(){
-    var n = document.getElementById("first_name").value;
-    var m = document.getElementById("last_name").value;
-    var link = document.getElementById("person_url").value
+    var n = document.getElementById("fprincipal").value;
+    var m = document.getElementById("lprincipal").value;
+    var link = document.getElementById("pi_url").value
     titles = peop.split(",")
     if(titles.includes(n+" "+m)){
       alert("You are already in the CS4SG Organization. Please select the name from above")
@@ -260,9 +251,9 @@ destination_layout: funds
       document.getElementById("new_PI_added").innerHTML = n+" "+m+" ("+link+")";
       ext_person = (link != "") ? "<a href = '"+ link +"' target='_blank'>"+n+" "+m+"</a>" : n+" "+m;
     }
-    document.getElementById("first_name").value = "";
-    document.getElementById("last_name").value = "";
-    document.getElementById("person_url").value = "";
+    document.getElementById("fprincipal").value = "";
+    document.getElementById("lprincipal").value = "";
+    document.getElementById("pi_url").value = "";
   }
 
   var res_topics = tagger(getdata("/projects.html"), 'tagged', "t");
