--- a/_forms/funding_form.html
+++ b/_forms/funding_form.html
@@ -112,6 +112,7 @@ destination_layout: funds
           const start = document.getElementById('start').value
           var pi = talker();
           if(pi === ""){
+            //Case for external PI.
             pi = ext_person;
           }
           pi = pi + "==>>Principal_Investigator";
