Added check for absolute Links

--- a/_forms/funding_form.html
+++ b/_forms/funding_form.html
@@ -53,7 +53,7 @@ destination_layout: funds
         <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;"><center><h5>Choose Principal Investigator</h5></center><div id="orator"></div><hr/>
         <center><h5>Principal Investigator</h5></center>
         <div><input type="text" id="fprincipal" placeholder="Enter a new principal investigator" style="width:45%">&nbsp;<input type="text" id="lprincipal" placeholder="Last Name" style="width:45%"></div>
-        <div><input type="text" id="pi_url" placeholder="Enter website URL (if any)" style="width:90%"></div>
+        <div><input type="text" id="pi_url" placeholder="Enter website URL (if any)" style="width:90%" onchange="checkURL('pi_url')"></div>
         <input type="button" onclick="add_new_PI();" value="Add principal investigator" style="width:10%"> &nbsp; OR  &nbsp;
         <input type="button" onclick="window.open('_forms/people_form.html')" value="Add to Organization"><br />
         <div style="font-weight: normal; text-align: left; padding: 10px;">
@@ -69,7 +69,7 @@ destination_layout: funds
         <hr/>
         <center><h5>Enter external people related to this Project</h5></center>
         <div><input type="text" id="first_name" placeholder="First Name" style="width:45%">&nbsp;<input type="text" id="last_name" placeholder="Last Name" style="width:45%"></div>
-        <div><input type="text" id="person_url" placeholder="Enter website URL (if any)" style="width:90%"></div>
+        <div><input type="text" id="person_url" placeholder="Enter website URL (if any)" style="width:90%" onchange="checkURL('person_url')"></div>
         <input type="button" onclick="add_new();" value="Add Person"> &nbsp; OR  &nbsp;
         <input type="button" onclick="window.open('/people_form.html')" value="Add to Organization"><br />
         <ul id="new_people_added" style="font-weight: normal; text-align: left; padding: 10px;"><LH><b>Added external People:</b></LH></ul>
@@ -250,6 +250,16 @@ destination_layout: funds
   else{
   alert("Please enter a firstname and / or lastname")
   }
+  }
+
+  function checkURL(ids){
+    let url = document.getElementById(ids).value;
+    if (url.indexOf('://') > 0 || url.indexOf('//') === 0 ) {
+        // URL is absolute
+    } else {
+        alert("Please enter a valid absolute URL");
+        document.getElementById(ids).value = "";
+    }
   }
 
   function add_new_PI(){
