--- a/_forms/courses_form.html
+++ b/_forms/courses_form.html
@@ -32,7 +32,7 @@ destination_layout: default
           <hr/>
           <center><h5>Enter external Instructors</h5></center>
           <div><input type="text" id="fn" placeholder="First Name" style="width:45%">&nbsp;<input type="text" id="ln" placeholder="Last Name" style="width:45%"></div>
-          <div><input type="text" id="pu" placeholder="Enter website URL (if any)" style="width:90%"></div>
+          <div><input type="text" id="pu" placeholder="Enter website URL (if any)" style="width:90%" onchange="checkURL('pu')"></div>
           <input type="button" onclick="add_new2();" value="Add Person"> &nbsp; OR  &nbsp;
           <input type="button" onclick="window.open('/people_form.html')" value="Add to Organization"><br />
           <ul id="new_author_added" style="font-weight: normal; text-align: left; padding: 10px;"><LH><b>Added external instructors:</b></LH></ul>
@@ -203,6 +203,16 @@ else{
 else{
 alert("Please enter a firstname and / or lastname")
 }
+}
+
+function checkURL(ids){
+    let url = document.getElementById(ids).value;
+    if (url.indexOf('://') > 0 || url.indexOf('//') === 0 ) {
+        // URL is absolute
+    } else {
+        alert("Please enter a valid absolute URL");
+        document.getElementById(ids).value = "";
+    }
 }
 
 function getdata(file){
